--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,14 +1,22 @@
 header {
-    background-color: #f5f5f5;
-    padding: 30px;
+    padding: 25px;
+    background-color: #FFA973; /* Cor de fundo do header */
     display: flex;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.headerItems{
-    margin: 5px;
+.headerItems {
+    margin-right: 15px;
     text-decoration: none;
-    color: #2778ce;
-    font-weight: bold;
-    transition: color 0.3s ease;
+    color: #000;
+    font-size: 18px;
+}
+
+.headerItems:hover {
+    text-decoration: underline; /* Efeito ao passar o mouse */
+}
+
+.carrinho-img {
+    width: 50px;
+    height: auto; /* Ajusta a imagem proporcionalmente */
 }
