--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -26,7 +26,11 @@
   font-size: 2.5rem;
   color: #000000;
   margin: auto auto;
-  
+}
+
+#logo a{
+  text-decoration: none;
+  color: #000000;
 }
 
 #title_Bemvindo {
@@ -48,11 +52,11 @@
 
 #form_login {
   margin-top: 2rem;
+  width: 80%;
 }
 
 #password{
   color: #000000;
-  border-style: solid;
   border-radius: 10px;
   border-color: #000000;
 
@@ -60,14 +64,12 @@
 
 #email{
   color: #000000;
-  border-style: solid;
   border-radius: 10px;
   border-color: #000000;
 }
 
 #lembrar{
   color: #000000;
-  border-style: solid;
   border-color: #000000;
 }
 
